--- a/docs/sdk/通信协议格式.md
+++ b/docs/sdk/通信协议格式.md
@@ -74,7 +74,8 @@
     "move":[[x1,y1],[x2,y2]...],//绝对坐标，不移动可以传[-1,-1]，分别是自己控制角色编号从小到大
     "shoot":[[x1,y1],[x2,y2],...],//绝对坐标，不射击可以传[-1,-1]
     "meteor":[[x1,y1],[x2,y2],...],//绝对坐标，不使用可以传[-1,-1]
-    "flash": [true,false,...]//这次移动是否变为闪现
+    "flash": [true,false,...],//这次移动是否变为闪现
+    "debug": "this is a debug msg"
 }
 ```
 
